--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.17.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-scroll-to-top": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
